--- a/style.css
+++ b/style.css
@@ -22,3 +22,10 @@ a{
     text-decoration: none;
     color:black;
 }
+h1{
+    text-align: center;
+}
+#form{
+    margin:0 auto;
+    display:block;
+}
